--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "MIT"
   ],
   "homepage": "http://plugins.compzets.com/animatescroll",
-  "author": [
+  "authors": [
     "Ram Swaroop <ramswarooppatra@gmail.com>"
   ],
   "main": [
